# resume-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: docker-image.yml
api/: settings.py  urls.py
api/tests/: test_auth.py
profiles/: admin.py  models.py  permissions.py  serializers.py  viewsets.py
profiles/migrations/: 0001_initial.py  0002_profile_user.py  0003_profile_uuid.py
profiles/tests/: fixture.py  test_admin.py  test_models.py  test_viewsets.py
resume/: settings.py  urls.py
resume/core/: apps.py  models.py
resume/education/: admin.py  apps.py  models.py  serializers.py  viewsets.py
resume/education/migrations/: 0001_initial.py  0002_alter_education_options_alter_education_end_date.py  0002_initial.py  0003_alter_education_profile.py  0004_alter_education_gpa.py  0005_language.py
resume/profiles/: admin.py  apps.py  models.py  permissions.py  serializers.py  viewsets.py
resume/profiles/migrations/: 0001_initial.py  0002_initial.py  0002_profile_about.py  0003_alter_profile_skills.py  0004_alter_profile_skills.py
resume/profiles/tests/: fixture.py  test_admin.py  test_models.py  test_viewsets.py
resume/roles/: admin.py  apps.py  models.py  serializers.py  viewsets.py
resume/roles/migrations/: 0001_initial.py  0002_role_employment_type.py
resume/skills/: admin.py  apps.py  models.py  serializers.py  viewsets.py
resume/skills/migrations/: 0001_initial.py
resume/tests/: test_auth.py
resume/users/: admin.py  apps.py  managers.py  models.py  serializers.py  viewsets.py
resume/users/migrations/: 0001_initial.py
resume/users/tests/: fixture.py  test_admin.py  test_models.py
users/: models.py  serializers.py  urls.py  views.py  viewsets.py
users/migrations/: 0001_initial.py
users/tests/: test_admin.py  test_models.py
