[tool.poetry]
name = "resume"
version = "0.1.0"
description = ""
authors = ["Wesley Mendes <wesley@wesleymendes.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
python-decouple = "^3.4"
psycopg2-binary = "^2.8.6"
djangorestframework-simplejwt = "^4.6.0"
django-extensions = "^3.1.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
factory-boy = "^3.2.0"
Faker = "^6.6.3"
flake8 = "^3.9.0"
ipdb = "^0.13.7"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
pytest-flake8 = "^1.0.7"
requests = "^2.25.0"
pytest-cov = "^2.11.1"
pytest-pythonpath = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
